--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ p {
 /* Styling for the header and navigation */
 
 header {
-    background-color: var(--pink);
+    background-color: var(--darkturq);
     color: #ffffff;
     padding: 5rem;
     font-family: Garamond, 'Times New Roman', Times, serif;
@@ -220,6 +220,7 @@ h2 {
 }
 
 /* Styling for the footer */
+
 footer {
     background-color: var(--darkturq);
     color: white;
@@ -229,4 +230,14 @@ footer {
     align-items: center;
     text-align: center;
     font-size: 5rem;
+    display: flex;
+    justify-content: center;
+}
+
+footer p {
+    margin: 5rem;
+    text-decoration: underline;
+    text-decoration-color: var(--pink);
+    font-weight: bold;
+    font-size: 2.5rem;
 }
