--- a/style.css
+++ b/style.css
@@ -217,6 +217,15 @@ h2 {
     #large-square {
         flex-basis: 40rem;
     }
+
+    footer {
+        flex-direction: column;
+        margin-top: 1rem;
+    }
+
+    footer p {
+        margin: 3rem;
+    }
 }
 
 /* Styling for the footer */
@@ -224,8 +233,6 @@ h2 {
 footer {
     background-color: var(--darkturq);
     color: white;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: bold;
     padding: 5%;
     align-items: center;
     text-align: center;
@@ -235,9 +242,12 @@ footer {
 }
 
 footer p {
-    margin: 5rem;
-    text-decoration: underline;
-    text-decoration-color: var(--pink);
-    font-weight: bold;
-    font-size: 2.5rem;
+    margin: 2rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 2.5rem; 
+    border: 0.5rem solid white;
+    border-radius: 2rem;
+    padding: 1.5rem;
+    color: var(--white);
+    line-height: 3rem;
 }
