--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ h1 {
 h2 {
     color: var(--darkturq);
     font-family: Garamond, 'Times New Roman', Times, serif;
-    font-size: 3.5rem;
+    font-size: 3rem;
     font-weight: bold;
     margin-bottom: 1rem;
 }
@@ -130,7 +130,7 @@ nav a {
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100%;
-    border: 1.5em solid var(--darkturq);
+    border: 1rem solid var(--darkturq);
 }
 
 #large-square:hover {
@@ -145,6 +145,7 @@ nav a {
     top: 70%;
     left: 0%;
     background-color: var(--yellow);
+    text-align: left;
 }
 
 .square {
@@ -219,7 +220,7 @@ nav a {
     }
 
     .square-title {
-        left: 10%;
+        margin-left: 3rem;
     }
 
     footer {
