modified main content padding for improved responsive design

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
     overflow: hidden;
     border: 1rem solid var(--green);
     border-radius: 5rem;
+    max-width: 100%;
 }
 
 main {
@@ -180,6 +181,10 @@ nav a {
 }
 
 @media screen and (max-width: 768px) {
+    main {
+        padding: 2rem;
+    }
+    
     .square {
       width: 100%;
     }
