updated nav bar

--- a/style.css
+++ b/style.css
@@ -84,6 +84,11 @@ nav a {
     background-color: var(--dkgray);
 }
 
+nav a:hover {
+    background-color: var(--dkblue);
+    transition: ease-in-out 0.5s;
+}
+
 /* Styling for the About Me section */
 
 #portfolio-img {
