fixed portrait img height

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ nav li:hover {
 
 #portfolio-img {
     float: left;
-    height: 60rem;
+    height: 1024px;
     margin-bottom: 2rem;
     margin-right: 3rem;
 }
