--- a/style.css
+++ b/style.css
@@ -43,12 +43,14 @@ header {
     background-color: var(--dkblue)
 }
 
-nav {
-    font-size: 24px;
+.nav-item a {
+    font-size: 1.5vw;
+    border: 3px solid transparent;
 }
 
-nav li:hover {
-    background-color: var(--olive);
+.nav-item a:hover {
+    border-bottom: 3px solid white;
+    transition: 0.3s ease-in-out;
 }
 
 /* Styling for the About Me section */
@@ -169,6 +171,10 @@ footer {
         text-align: center;
     }
 
+    .nav-item a {
+        font-size: 2.5vw;
+    }
+
     #portfolio-img {
         height: 30rem;
     }
@@ -193,6 +199,10 @@ footer {
 
     h1 {
         font-size: 4rem;
+    }
+
+    .nav-item a {
+        font-size: 3.5vw;
     }
 
     .image-wrapper {
@@ -256,6 +266,10 @@ footer {
 @media screen and (max-width: 400px) {
     h1 {
         font-size: 3rem;
+    }
+
+    .nav-item a {
+        font-size: 5vw;
     }
 
     .display-2 {
